--- a/src/siteroot/core/css/components/nav-primary-2022.scss
+++ b/src/siteroot/core/css/components/nav-primary-2022.scss
@@ -42,6 +42,15 @@
 			}
 		}
 	}
+
+	.nav-primary__items {
+		li {
+			a {
+				font-size: 0.7em;
+			}
+		}
+	}
+
 	body.-overlay-active & {
 		.nav-logo svg {
 			fill: #fff;
