--- a/src/siteroot/core/components/page/Hero-2022.module/module.css
+++ b/src/siteroot/core/components/page/Hero-2022.module/module.css
@@ -6,6 +6,7 @@
 .hero > .inner {
   align-items: stretch;
   padding-top: 8rem;
+  padding-right: 1.4rem;
 }
 @media screen and (min-width: 860px) {
   .hero > .inner {
@@ -16,7 +17,7 @@
 }
 .hero > .inner > .unit {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 @media screen and (min-width: 860px) {
