--- a/src/siteroot/core/components/page/Hero-2022.module/module.scss
+++ b/src/siteroot/core/components/page/Hero-2022.module/module.scss
@@ -56,6 +56,8 @@ $color-primary: #f16345;
 	> .inner {
 		align-items: stretch;
 		padding-top: 8rem;
+		padding-right:1.4rem;
+		
 		@include query-desktop {
 			min-height: 50vh;
 			padding-top: calc(6rem + 8%);
@@ -63,7 +65,7 @@ $color-primary: #f16345;
 		}
 		> .unit {
 			display: flex;
-			justify-content: center;
+			justify-content: flex-start;
 			align-items: center;
 		}
 	}
