--- a/src/scss/_tools/_colors.scss
+++ b/src/scss/_tools/_colors.scss
@@ -1,1 +1,9 @@
-$black: #000;
+$color-primary: #F16345;
+$color-ko: #FFFFFF;
+$color-secondary: #5384A1;
+$color-secondary_text: #417594;
+$color-tertiary: #FED844;
+$color-black: #29292B;
+$color-black_highlight: #161618;
+$color-gray_1: #959394;
+$color-gray_2: #EEEAE6;
