--- a/src/siteroot/core/css/components/hero-2022.css
+++ b/src/siteroot/core/css/components/hero-2022.css
@@ -88,8 +88,10 @@
   background-size: cover;
   background-position: center;
 }
-.hero.full_bleed_image > .inner {
-  padding-bottom: 23%;
+@media screen and (min-width: 860px) {
+  .hero.full_bleed_image > .inner {
+    padding-bottom: 20%;
+  }
 }
 .hero.full_bleed_image .line {
   color: #fff;
@@ -108,6 +110,9 @@
   z-index: 1;
   position: relative;
   margin-top: 2rem;
+  padding-bottom: 60%;
+  height: 0;
+  width: 100%;
 }
 @media screen and (min-width: 860px) {
   .hero__image {
@@ -117,8 +122,10 @@
 .hero__image img {
   max-width: 100%;
   width: 100%;
+  height: 100%;
   max-height: 100vh;
   object-fit: cover;
+  position: absolute;
 }
 @media screen and (min-width: 860px) {
   .hero__image img {
@@ -138,5 +145,3 @@
 .hero__text_wrapper {
   padding: 0;
 }
-
-/*# sourceMappingURL=module.css.map */
