--- a/src/siteroot/core/css/components/hero-2022.scss
+++ b/src/siteroot/core/css/components/hero-2022.scss
@@ -39,7 +39,9 @@ $color-primary: #f16345;
 	background-size: cover;
 	background-position: center;
 	> .inner {
-		padding-bottom: 23%;
+		@include query-desktop {
+			padding-bottom: 20%;
+		}
 	}
 	.line {
 		color: $color-white;
@@ -56,8 +58,8 @@ $color-primary: #f16345;
 	> .inner {
 		align-items: stretch;
 		padding-top: 8rem;
-		padding-right:1.4rem;
-		
+		padding-right: 1.4rem;
+
 		@include query-desktop {
 			min-height: 50vh;
 			padding-top: calc(6rem + 8%);
@@ -143,14 +145,20 @@ $color-primary: #f16345;
 	z-index: 1;
 	position: relative;
 	margin-top: 2rem;
+	padding-bottom: 60%;
+	height: 0;
+	width: 100%;
+
 	@include query-desktop {
 		margin: 0;
 	}
 	img {
 		max-width: 100%;
 		width: 100%;
+		height: 100%;
 		max-height: 100vh;
 		object-fit: cover;
+		position: absolute;
 
 		@include query-desktop {
 			box-shadow: rgba(0, 0, 0, 0.25) 0px 48px 100px 0px;
